samples/_failures_safe/1761304550_e5a924_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26a76d5c.c: In function ‘main’:
./samples/SAFE/__tmp_26a76d5c.c:134:24: error: missing terminating " character
  134 |                 printf("Invalid log level.
      |                        ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_26a76d5c.c:134:17: error: expected expression at end of input
  134 |                 printf("Invalid log level.
      |                 ^~~~~~
./samples/SAFE/__tmp_26a76d5c.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26a76d5c.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26a76d5c.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26a76d5c.c:134:17: error: expected declaration or statement at end of input
